# gtkmm_ex

./: CMakeLists.txt  build.sh  readme.md
src/: main.cpp  main.glade  main.glade~
